--- a/api/package.json
+++ b/api/package.json
@@ -9,9 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.978.0",
     "csv-parse": "^4.16.0",
+    "csv-stream": "^0.2.0",
     "express": "^4.17.1",
+    "firebase-admin": "^9.11.1",
     "languagedetect": "^2.0.0",
-    "mongodb": "^4.1.0"
+    "mongodb": "^4.1.0",
+    "node-fetch": "^2.6.1",
+    "through2": "^4.0.2"
   }
 }
